# pentelka

./: .gitignore  CMakeLists.txt  Makefile  README.md  inno_win_release.iss  main.cpp  main.qml  shell.nix
env/: .clangd_example
src/: CMakeLists.txt  app.rc  main.cpp  pentelka.pro  qml.qrc
src/canvas/item/: canvasitem.cpp  canvasitem.h
src/image/: info.cpp  info.hpp  types.hpp
src/painter/: imageprovider.hpp  painter.cpp  painter.hpp  tools.hpp
src/qml/: image_info.qml  main.qml  options.qml
tests/bmp/: ! info.txt  Zpracovani rastrovych obrazku formatu BMP.docx
